--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "9  Harold & Kumar Escape from Guantanamo Bay           2008  0.464452"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "9                       Up           2009  0.368857"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "9           The Hangover           2009  0.369214"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "9    The Secret Life of Walter Mitty           2013  0.435959"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "9                                         Spider-Man           2002  0.398373"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "9  The Dark Knight Rises           2012  0.404911"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "9       Zombieland           2009  0.398180"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "9                                  The Avengers           2012  0.456070"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
        "9                                          Matilda           1996  0.582712"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1418,13 +1418,282 @@
        "9                    Looper           2012  0.425359"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "getrecs('Django Unchained')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you enjoyed The Santa Clause (1991), here are the top 10 movies we think you'll also enjoy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Released Year</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beauty and the Beast</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.433467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Casper</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.439174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aladdin</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0.448384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snow White and the Seven Dwarfs</td>\n",
+       "      <td>1937</td>\n",
+       "      <td>0.460714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Lion King</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.476047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>While You Were Sleeping</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.477153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>The Indian in the Cupboard</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.482492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>The Mask</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.490872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Mrs. Doubtfire</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>0.497690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>True Lies</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.499306</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Title  Released Year  Distance\n",
+       "0             Beauty and the Beast           1991  0.433467\n",
+       "1                           Casper           1995  0.439174\n",
+       "2                          Aladdin           1992  0.448384\n",
+       "3  Snow White and the Seven Dwarfs           1937  0.460714\n",
+       "4                    The Lion King           1994  0.476047\n",
+       "5          While You Were Sleeping           1995  0.477153\n",
+       "6       The Indian in the Cupboard           1995  0.482492\n",
+       "7                         The Mask           1994  0.490872\n",
+       "8                   Mrs. Doubtfire           1993  0.497690\n",
+       "9                        True Lies           1994  0.499306"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getrecs('The Santa Clause')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are not enough ratings for this movie.\n"
+     ]
+    }
+   ],
+   "source": [
+    "getrecs('Moana')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you enjoyed Batman (1994), here are the top 10 movies we think you'll also enjoy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Released Year</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True Lies</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.300079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Batman Forever</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.305549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Terminator 2: Judgment Day</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.310221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jurassic Park</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>0.329667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Fugitive</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>0.349344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The Mask</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.366181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Braveheart</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.387096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Speed</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0.388161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Die Hard: With a Vengeance</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.390254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Aladdin</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0.392825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Title  Released Year  Distance\n",
+       "0                   True Lies           1994  0.300079\n",
+       "1              Batman Forever           1995  0.305549\n",
+       "2  Terminator 2: Judgment Day           1991  0.310221\n",
+       "3               Jurassic Park           1993  0.329667\n",
+       "4                The Fugitive           1993  0.349344\n",
+       "5                    The Mask           1994  0.366181\n",
+       "6                  Braveheart           1995  0.387096\n",
+       "7                       Speed           1994  0.388161\n",
+       "8  Die Hard: With a Vengeance           1995  0.390254\n",
+       "9                     Aladdin           1992  0.392825"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getrecs('Batman')"
    ]
   },
   {
@@ -1436,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
