--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -93,12 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def getrecs(movie):\n",
+    "#def getrecs(movieId):\n",
     "    moviestorec = 10\n",
     "\n",
     "    # Find the movieId of the given movie title\n",
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -277,18 +278,18 @@
        "9  Harold & Kumar Escape from Guantanamo Bay           2008  0.464452"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getrecs('the other guys')"
+    "getrecs('The Other Guys')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>WALL·E</td>\n",
+       "      <td>WALL-E</td>\n",
        "      <td>2008</td>\n",
        "      <td>0.298138</td>\n",
        "    </tr>\n",
@@ -393,7 +394,7 @@
        "                     Title  Released Year  Distance\n",
        "0             The Avengers           2012  0.285319\n",
        "1          The Dark Knight           2008  0.285835\n",
-       "2                   WALL·E           2008  0.298138\n",
+       "2                   WALL-E           2008  0.298138\n",
        "3               Iron Man 2           2010  0.307492\n",
        "4                   Avatar           2009  0.310893\n",
        "5            Batman Begins           2005  0.362759\n",
@@ -403,7 +404,7 @@
        "9                       Up           2009  0.368857"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +530,7 @@
        "9           The Hangover           2009  0.369214"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +656,7 @@
        "9    The Secret Life of Walter Mitty           2013  0.435959"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +782,7 @@
        "9                                         Spider-Man           2002  0.398373"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +832,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>WALL·E</td>\n",
+       "      <td>WALL-E</td>\n",
        "      <td>2008</td>\n",
        "      <td>0.259324</td>\n",
        "    </tr>\n",
@@ -895,7 +896,7 @@
       ],
       "text/plain": [
        "                   Title  Released Year  Distance\n",
-       "0                 WALL·E           2008  0.259324\n",
+       "0                 WALL-E           2008  0.259324\n",
        "1                 Avatar           2009  0.289607\n",
        "2        Sherlock Holmes           2009  0.357785\n",
        "3            Toy Story 3           2010  0.358239\n",
@@ -907,7 +908,7 @@
        "9  The Dark Knight Rises           2012  0.404911"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +964,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>WALL·E</td>\n",
+       "      <td>WALL-E</td>\n",
        "      <td>2008</td>\n",
        "      <td>0.306969</td>\n",
        "    </tr>\n",
@@ -1022,7 +1023,7 @@
       "text/plain": [
        "             Title  Released Year  Distance\n",
        "0               Up           2009  0.289607\n",
-       "1           WALL·E           2008  0.306969\n",
+       "1           WALL-E           2008  0.306969\n",
        "2       District 9           2009  0.309947\n",
        "3         Iron Man           2008  0.310893\n",
        "4    Kung Fu Panda           2008  0.358604\n",
@@ -1033,7 +1034,7 @@
        "9       Zombieland           2009  0.398180"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1160,7 @@
        "9                                  The Avengers           2012  0.456070"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,14 +1178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If you enjoyed The Avengers (1998), here are the top 10 movies we think you'll also enjoy!\n"
+      "If you enjoyed The Avengers (2014), here are the top 10 movies we think you'll also enjoy!\n"
      ]
     },
     {
@@ -1216,83 +1217,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Sphere</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>0.464465</td>\n",
+       "      <td>Guardians of the Galaxy</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.241876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>The Edge</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>0.502303</td>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>0.285319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Anaconda</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>0.507164</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.293238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>William Shakespeare's A Midsummer Night's Dream</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>0.548800</td>\n",
+       "      <td>Iron Man 2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.304975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Snake Eyes</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>0.563339</td>\n",
+       "      <td>X-Men: First Class</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>0.321610</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Reindeer Games</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>0.564510</td>\n",
+       "      <td>X-Men: Days of Future Past</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.332192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Speed 2: Cruise Control</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>0.567220</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.340302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Mercury Rising</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>0.568688</td>\n",
+       "      <td>Captain America: The Winter Soldier</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.357826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>The Haunting</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>0.578154</td>\n",
+       "      <td>Star Wars: Episode VII - The Force Awakens</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0.364373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Matilda</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>0.582712</td>\n",
+       "      <td>Edge of Tomorrow</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.371589</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Title  Released Year  Distance\n",
-       "0                                           Sphere           1998  0.464465\n",
-       "1                                         The Edge           1997  0.502303\n",
-       "2                                         Anaconda           1997  0.507164\n",
-       "3  William Shakespeare's A Midsummer Night's Dream           1999  0.548800\n",
-       "4                                       Snake Eyes           1998  0.563339\n",
-       "5                                   Reindeer Games           2000  0.564510\n",
-       "6                          Speed 2: Cruise Control           1997  0.567220\n",
-       "7                                   Mercury Rising           1998  0.568688\n",
-       "8                                     The Haunting           1999  0.578154\n",
-       "9                                          Matilda           1996  0.582712"
+       "                                        Title  Released Year  Distance\n",
+       "0                     Guardians of the Galaxy           2014  0.241876\n",
+       "1                                    Iron Man           2008  0.285319\n",
+       "2                       The Dark Knight Rises           2012  0.293238\n",
+       "3                                  Iron Man 2           2010  0.304975\n",
+       "4                          X-Men: First Class           2011  0.321610\n",
+       "5                  X-Men: Days of Future Past           2014  0.332192\n",
+       "6                                   Inception           2010  0.340302\n",
+       "7         Captain America: The Winter Soldier           2014  0.357826\n",
+       "8  Star Wars: Episode VII - The Force Awakens           2015  0.364373\n",
+       "9                            Edge of Tomorrow           2014  0.371589"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1419,7 @@
        "9                    Looper           2012  0.425359"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,133 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "If you enjoyed The Santa Clause (1991), here are the top 10 movies we think you'll also enjoy!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Released Year</th>\n",
-       "      <th>Distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Beauty and the Beast</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>0.433467</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Casper</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>0.439174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aladdin</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>0.448384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Snow White and the Seven Dwarfs</td>\n",
-       "      <td>1937</td>\n",
-       "      <td>0.460714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Lion King</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>0.476047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>While You Were Sleeping</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>0.477153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>The Indian in the Cupboard</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>0.482492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>The Mask</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>0.490872</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Mrs. Doubtfire</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>0.497690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>True Lies</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>0.499306</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             Title  Released Year  Distance\n",
-       "0             Beauty and the Beast           1991  0.433467\n",
-       "1                           Casper           1995  0.439174\n",
-       "2                          Aladdin           1992  0.448384\n",
-       "3  Snow White and the Seven Dwarfs           1937  0.460714\n",
-       "4                    The Lion King           1994  0.476047\n",
-       "5          While You Were Sleeping           1995  0.477153\n",
-       "6       The Indian in the Cupboard           1995  0.482492\n",
-       "7                         The Mask           1994  0.490872\n",
-       "8                   Mrs. Doubtfire           1993  0.497690\n",
-       "9                        True Lies           1994  0.499306"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getrecs('The Santa Clause')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1562,7 @@
        "9                     Aladdin           1992  0.392825"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
