Finalized files commit

--- a/sqlalchemy_plots.ipynb
+++ b/sqlalchemy_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['tags', 'ratings', 'users', 'movies']\n"
+      "['ratings', 'users', 'movies', 'tags']\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,44 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Functional alternative code which queries the SQL database using SQL syntax through sqlalchemy\n",
-    "\n",
-    "# # Your raw SQL query as a string\n",
-    "# sql_query = \"\"\"\n",
-    "# SELECT r.userid, usr.user_name, r.rating, x.*\n",
-    "# FROM movies mov\n",
-    "# JOIN ratings r ON r.movieid = mov.movieid\n",
-    "# JOIN users usr ON usr.userid = r.userid\n",
-    "# CROSS JOIN LATERAL (\n",
-    "#     VALUES\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_1),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_2),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_3),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_4),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_5),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_6),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_7),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_8),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_9),\n",
-    "#         (mov.movieid, mov.title, mov.released_year, mov.genre_10)\n",
-    "# ) AS x(movieid, title, released_year, genres)\n",
-    "# WHERE x.genres IS NOT NULL\n",
-    "# ORDER BY r.userid, r.rating, mov.title, mov.movieid, x.genres;\n",
-    "# \"\"\"\n",
-    "# # Execute the raw SQL query using session.query\n",
-    "# with engine.connect() as con:\n",
-    "#     data = con.execute(text(sql_query)).all()\n",
-    "#     for row in data:\n",
-    "#         print(row)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +169,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +412,7 @@
        "8        Horror          3.258"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +493,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +526,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
