Added presentation pdf

--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (Accuracy Score): 0.9285050973858542\n",
-      "Mean Squared Error: 0.9285050973858542\n"
+      "Mean Squared Error: 0.9285050973858542\n",
+      "R-squared score: 0.15201600362427115\n"
      ]
     }
    ],
@@ -82,8 +82,10 @@
     "\n",
     "# Calculate and print mean squared error\n",
     "mse = mean_squared_error(predictions, y_test)\n",
+    "rsq_score = r2_score(predictions, y_test)\n",
     "# acc = accuracy_score(predictions, y_test)\n",
-    "print(f\"Mean Squared Error: {mse}\")"
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "print(f\"R-squared score: {rsq_score}\")"
    ]
   },
   {
